--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ]
   },
   "require": {
-    "plesk/zf1": "1.12.17-patch",
+    "plesk/zf1": "1.12.17-patch4",
     "psr/log": "^1.1",
     "psr/container": "^1.0"
   },
