--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,11 +23,13 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - name: PHP Composer
-        run: composer install
-        
-      - name: PHP Documentator
-        run: composer docs
+      - uses: szepeviktor/phive@v1.0.0
+
+      - name: Install PhpDocumentator
+        run: phive --no-progress install --trust-gpg-keys 0x67F861C3D889C656
+
+      - name: Run PhpDocumentator
+        run: php  "-derror_reporting=E_ERROR|E_WARNING|E_PARSE" tools/phpdocumentor
 
       - name: GitHub Pages action
         uses: peaceiris/actions-gh-pages@v3
